@@ -1,3 +1,10 @@
+2007-06-21  Scott James Remnant  <scott@netsplit.com>
+
+	* init/tests/test_job.c (test_copy): Make sure that the job copy
+	references and blocks the event; and in the event of failure, doesn't
+	* init/job.c (job_copy): Reset the start_on and stop_on expressions
+	in the event of failure.
+
 2007-06-20  Scott James Remnant  <scott@netsplit.com>
 
 	* TODO: Update.
